--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,7 +10,7 @@ add_library(CANdb ${SRC} ${dbc_grammar})
 target_include_directories(CANdb INTERFACE ${CMAKE_CURRENT_SOURCE_DIR} PRIVATE ${CMAKE_CURRENT_BINARY_DIR} ${Boost_INCLUDE_DIRS})
 target_link_libraries(CANdb cpp-peglib ${LIBSPDLOG})
 
-set_target_properties(CANdb PROPERTIES CMAKE_CXX_FLAGS "-fPIC")
+set_target_properties(CANdb PROPERTIES COMPILE_FLAGS "-fPIC")
 set_target_properties(CANdb PROPERTIES
             OUTPUT_NAME CANdb
             DEBUG_POSTFIX "d"
