Completing downstream merge of my fork (retains fixed spdlos 1.4.2 dependency for binary compatibility, keeping my travis config)
Signed-off-by: jenszo <jens@AUDIINL20437973>

--- a/3rdParty/CMakeLists.txt
+++ b/3rdParty/CMakeLists.txt
@@ -19,4 +19,6 @@ if (CANDB__TRAVIS_BUILD)
     target_include_directories(${LIBSPDLOG} INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/spdlog/include)
 endif (CANDB__TRAVIS_BUILD )
 
+add_library(expected INTERFACE)
+target_include_directories(expected INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/expected)
 add_library(tl::expected ALIAS expected)
