Introducing DBCSimpleParser to enable binary compatible API without potentially conflicing dependency to std:expected header for use as external, static library
Signed-off-by: jenszo <6693266+jenszo@users.noreply.github.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,14 @@
 find_package(Boost REQUIRED)
 set(
   SRC
+  dbc.h
+  dbc.cpp
+  parser.hpp
+  dbcparser.h
   dbcparser.cpp
+  parsererror.hpp
   parsererror.cpp
+  lambda_visitor.hpp
   cantypes.hpp
   log.hpp
 )
@@ -41,6 +47,7 @@ install(
         log.hpp
         parser.hpp
         dbcparser.h 
+        dbc.h
     DESTINATION 
         include
 )
